--- a/WeatherApp/WeatherApp.css
+++ b/WeatherApp/WeatherApp.css
@@ -1,3 +1,9 @@
+/*************
+1. Default Values
+2. Header
+3. Main
+**************/
+
 /*Default Values*/
 
 html {
@@ -31,4 +37,24 @@ body {
 
 .fa-sun-o {
   font-size: 0.7em;
+}
+
+/*Main*/
+
+.container {
+  display: none;
+  height: 100%;
+  width: 90%;
+  background-color: rgba(211,211,211, 0.5);
+  margin: 0 auto;
+  border-radius: 1em;
+  padding: 2em;
+}
+
+#city {
+  font-size: 3rem;
+}
+
+#temperature {
+  font-size: 2rem;
 }
