--- a/WikipediaViewer/wikiViewer.css
+++ b/WikipediaViewer/wikiViewer.css
@@ -57,9 +57,6 @@ body {
 }
 
 /*search box*/
-#search-box{
-  display: none;
-}
 
 #search {
   border: 5px solid black;
@@ -68,4 +65,8 @@ body {
   font-size: 1.5em;
   color: #FFF;
   padding: 0.5em;
+}
+
+.hidden {
+  display: none;
 }
